@@ -1,6 +1,8 @@
 Version 1.7.1.99
 ------------------------------------------------------------------------------
 
+* `rbind.fill` now stops if inputs are not data frames. (Fixes #51)
+
 * `quickdf` correctly handles NA variable names. (Fixes #66. Thanks to Scott Kostyshak)
 
 * `*dply` now deals better with matrix results, converting them to data frames, rather than vectors. (Fixes #12)
